# nanoKontroller2

./: CMakeLists.txt  README.md  config-example.json
.github/: FUNDING.yml
.github/workflows/: build.yml
includes/: AppSettings.h  AudioService.h  DebugLog.h  LedManager.h  MidiManager.h  MidiTypes.h  NanoKontrol2.hpp
includes/Actions/: ActionFactoryRegistry.h  Action_Connection.h  Action_Mute.h  Action_Volume.h  IAction.h
packaging/: nanokontroller2.service  postinst
src/: AppSettings.cpp  AudioService.cpp  LedManager.cpp  MidiManager.cpp  main.cpp
src/Actions/: ActionFactoryRegistry.cpp  Action_Connection.cpp  Action_Mute.cpp  Action_Volume.cpp  IAction.cpp
